--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,6 @@
 
 
 	/* Background background*/
-	body {
-		background: url(../img/background.svg);
-	}
-
 	footer {
 		color: black;
 		text-align: center;
@@ -91,11 +87,6 @@
 	}
 
 	/* Background background*/
-	body {
-	background: url(../img/background.svg);
-	background-repeat: no-repeat;
-	background-color: #333;
-	}
 	footer {
 	color: white;
 	text-align: center;
@@ -120,4 +111,13 @@ button {
 	background-color: rgba(255,255,255,.3);
 	color: black;
 	transition: background-color 0.5s ease;
+}
+
+.upbackground {
+	background: url(../img/background.svg);
+	background-repeat: no-repeat;
+}
+
+body {
+	background: #333;
 }
